CHANGELOG fuer c't-Bot
======================
2011-02-12 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer gcc 4.4

2011-01-21 Timo Sandmann [mail@timosandmann.de]: BotFS Hilfsprogramm hinzugefuegt

2011-01-13 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer Buildproblem des MMC-Codes

2011-01-12 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer EEPROM-Emulation

2010-12-04 Timo Sandmann [mail@timosandmann.de]: BotFS-Volume robuster gemacht fuer zukuenftige Aenderungen. Image-Datei muss geloescht und neu angelegt werden, sorry (anlegen auf PC automatisch) 

2010-12-01 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer botfs_rename()

2010-11-20 Timo Sandmann [mail@timosandmann.de]: Speed-Log auf BotFS umgestellt

2010-11-19 Timo Sandmann [mail@timosandmann.de]: LOG_MMC_AVAILABLE kann jetzt mit USE_MINILOG und BOT_FS_AVAILABLE verwendet werden, dadurch auch parallel mit MAP_AVAILABLE. Ausserdem gibt es jetzt ein Display, das alle Log-Eintraege anzeigen kann (scrollen ueber Fernbedienung) 

2010-11-13 Timo Sandmann [mail@timosandmann.de]: RAM-Bedarf von uBasic verringert

2010-11-11 Frank Menzel  [menzelfr@gmx.de]:      Basic-Interpreter uBasic eingebaut mit entsprechendem Verhalten

2010-11-11 Timo Sandmann [mail@timosandmann.de]: Dateisystem BotFS (BOT_FS_AVAILABLE), RemoteCall-Display zur Verhaltenssteuerung (DISPLAY_REMOTECALL_AVAILABLE; #168), Bots werden beim Beenden sauber heruntergefahren, Anpassungen fuer Skript-Programme wie uBasic, Code aufgeraeumt, Compilezeit etwas verringert

2010-10-16 Timo Sandmann [mail@timosandmann.de]: Release 18

2010-09-11 Timo Sandmann [mail@timosandmann.de]: Projekteinstellungen aktualisiert (Debugging, Code Style)

2010-09-02 Timo Sandmann [mail@timosandmann.de]: Trace-File um Fernbedienungscode, BPS und RemoteCalls ergaenzt

2010-08-15 Timo Sandmann [mail@timosandmann.de]: sensor_dist_straight() als Alternative zu sensor_dist_lookup() - reicht die Sensordaten 1:1 weiter
