@@ -117,6 +117,10 @@
 #undef RC5_AVAILABLE
 #endif
 
+#ifndef RC5_AVAILABLE
+#undef KEYPAD_AVAILABLE
+#endif
+
 #ifndef MOUSE_AVAILABLE
 #undef MEASURE_MOUSE_AVAILABLE
 #undef MEASURE_COUPLED_AVAILABLE
